# queryowl

./: package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  lib.rs  main.rs
src/lib/: clipboard-handler.js  utils.ts
src/lib/components/: ConnectionManager.svelte  ConnectionStatus.svelte  CreateDatabaseDialog.svelte  DebugShortcuts.svelte  ExportDialog.svelte  LogViewer.svelte  QueryDataGrid.svelte  QueryHistory.svelte  QueryInterface.svelte  QueryResults.svelte  SavedQueries.svelte  SchemaPanel.svelte  SqlEditor.svelte  UpdateNotification.svelte
src/lib/components/ui/input/: input.svelte
src/lib/stores/: connections.ts
src/lib/types/: database.ts
src/lib/utils/: colors.ts
src/routes/: +layout.svelte  +page.svelte
